# minimum-api

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: minimum.yml
terraform/: main.tf
