[project]
name = "minimum-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "k0tk267", email = "k0tk2670@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.112.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/minimum_api"]
